fixed spacing around feedback div

--- a/static/styles.scss
+++ b/static/styles.scss
@@ -1,4 +1,4 @@
-@import  url(https://fonts.googleapis.com/css?family=Montserrat);
+//@import  url(https://fonts.googleapis.com/css?family=Montserrat);
 $button-color: #2D3142;
 
 h1 {
@@ -17,7 +17,7 @@ table {
 input {
    /* box-sizing: border-box; */
     display: table;
-    height: 50px;
+   /*  height: 50px; */
     width: 100%;
 }
 
@@ -73,6 +73,7 @@ h3{
     width: 100%;
     color: $button-color;
     font-family: Montserrat;
+    margin-bottom: 20px;
     border: none;
 }
 
